--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.4",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -27,9 +27,11 @@
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.1.2",
     "ngx-pagination": "^3.2.1",
+    "ngx-toastr": "^9.1.1",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
+    "tether": "^1.4.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
