--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.1.2",
+    "ngx-mask": "^7.0.1",
     "ngx-pagination": "^3.2.1",
     "ngx-toastr": "^9.1.1",
     "popper.js": "^1.14.6",
