--- a/node/package.json
+++ b/node/package.json
@@ -17,8 +17,10 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
+    "fs": "^0.0.1-security",
     "generic": "^0.1.1",
     "generic-node": "^1.0.3",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
     "typescript": "^3.1.6"
