--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "ejs": "^2.6.1",
+    "expo-server-sdk": "^3.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
